# parallel-mean-shift-openmp

./: CMakeLists.txt  README.md  alias.h  benchmark.cpp  distance.cpp  experiment.cpp  image.cpp  image.h  image_aos.cpp  image_aos.h  image_arr.cpp  image_arr.h  image_matrix.cpp  image_matrix.h  image_soa.cpp  image_soa.h  main.cpp  matrix_meanshift.cpp  matrix_meanshift_omp.cpp  meanshift_omp.cpp  meanshift_seq.cpp  options.h  rgb_pixels.cpp  soa_meanshift.cpp  soa_meanshift_omp.cpp  timings.txt
Image/: image_bigger_out.ppm  image_out.ppm
img/: out.ppm
libs/: CMakeLists.txt
